Fixed alignment of contact section on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -226,8 +226,9 @@ address {
   }
   
   footer .content-wrapper {
-    width: 55%;
-    margin: 50px 0;
+      width: 55%;
+      margin: 0;
+      text-align: center;
   }
   
   footer .contact {
